--- a/build.gradle
+++ b/build.gradle
@@ -1,39 +1,49 @@
-apply plugin: 'java'
-apply plugin: 'idea'
-apply plugin: 'eclipse'
-apply plugin: 'info.solidsoft.pitest'
+allprojects {
+    apply plugin: 'java'
+    apply plugin: 'idea'
+    apply plugin: 'eclipse'
+    apply plugin: 'info.solidsoft.pitest'
 
-group = 'com.ffbit'
-version = '0.0.1-SNAPSHOT'
+    group = 'com.ffbit'
+    version = '0.0.1-SNAPSHOT'
 
-sourceCompatibility = '1.8'
-targetCompatibility = '1.8'
+    sourceCompatibility = '1.8'
+    targetCompatibility = '1.8'
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.8'
-}
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    testCompile "org.hamcrest:hamcrest-all:1.3"
-    testCompile "junit:junit:4.12"
-    testCompile "pl.pragmatists:JUnitParams:1.0.4"
-    testCompile "org.mockito:mockito-core:1.10.19"
-}
-
-task initSourceFolders {
-    sourceSets*.allSource.srcDirs*.each { it.mkdirs() }
-}
-
-test {
-    testLogging {
-        events "passed", "skipped", "failed", "standardOut", "standardError"
-        exceptionFormat "full"
+    repositories {
+        mavenCentral()
     }
-    exclude(["**/AllTests*"])
+
+    dependencies {
+        testCompile "org.hamcrest:hamcrest-all:1.3"
+        testCompile "junit:junit:4.12"
+        testCompile "pl.pragmatists:JUnitParams:1.0.4"
+        testCompile "org.mockito:mockito-core:1.10.19"
+    }
+
+    task wrapper(type: Wrapper) {
+        gradleVersion = '2.8'
+    }
+
+
+    task initSourceFolders {
+        sourceSets*.allSource.srcDirs*.each { it.mkdirs() }
+    }
+
+    test {
+        testLogging {
+            events "passed", "skipped", "failed", "standardOut", "standardError"
+            exceptionFormat "full"
+        }
+        exclude(["**/AllTests*"])
+    }
+
+    pitest {
+        targetClasses = ['com.ffbit.geometry.*']
+        threads = 4
+        excludedMethods = ['hashCode']
+    }
+
 }
 
 buildscript {
@@ -44,10 +54,13 @@ buildscript {
     dependencies {
         classpath 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.1.6'
     }
+
 }
 
-pitest {
-    targetClasses = ['com.ffbit.geometry.*']
-    threads = 4
-    excludedMethods = ['hashCode']
+task testReport(dependsOn: [clean, test], type: TestReport) {
+    destinationDir = file("$buildDir/reports/allTests")
+    // Include the results from the `test` task in all subprojects
+    reportOn test, subprojects*.test
 }
+
+defaultTasks 'clean', 'testReport', 'pitest'
