--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ allprojects {
     }
 
     task wrapper(type: Wrapper) {
-        gradleVersion = '2.8'
+        gradleVersion = '2.9'
     }
 
 
@@ -44,6 +44,13 @@ allprojects {
         excludedMethods = ['hashCode']
     }
 
+}
+
+project('geometry-matchers') {
+    dependencies {
+        compile "org.hamcrest:hamcrest-all:1.3"
+        compile rootProject
+    }
 }
 
 buildscript {
